# ZCare_Doctor_Agent

./: .dockerignore  .env  Dockerfile  README.md  config.ini  main.py  pyproject.toml  requirements.txt
app/api/: routes.py
app/core/: config.py
app/models/: schemas.py
app/services/: ai_agent.py  document_processor.py
static/: index.html
static/css/: style.css
static/js/: script.js
